--- a/Persona4GoldenHelper/Persona4GoldenHelper/Persona4GoldenHelper.csproj
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Persona4GoldenHelper.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -16,6 +16,12 @@
     <Folder Include="Models\" />
     <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\js\" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <ProjectReference Include="..\Persona4GoldenHelper.Data\Persona4GoldenHelper.Data.csproj" />
+    <ProjectReference Include="..\Persona4GoldenHelper.Service\Persona4GoldenHelper.Service.csproj" />
   </ItemGroup>
 
 </Project>
