--- a/Persona4GoldenHelper/Persona4GoldenHelper/appsettings.Development.json
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=ANDYSPC;Database=Persona4GoldenHelper.Dev;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
