--- a/Persona4GoldenHelper/Persona4GoldenHelper/Persona4GoldenHelper.csproj
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Persona4GoldenHelper.csproj
@@ -9,12 +9,16 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="3.7.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 
   <ItemGroup>
-    <Folder Include="wwwroot\js\" />
     <Folder Include="wwwroot\img\" />
+    <Folder Include="wwwroot\scipts\" />
   </ItemGroup>
 
 
