--- a/Persona4GoldenHelper/Persona4GoldenHelper.Data/Persona4GoldenHelper.Data.csproj
+++ b/Persona4GoldenHelper/Persona4GoldenHelper.Data/Persona4GoldenHelper.Data.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Data\WeaponData.cs" />
+    <Compile Remove="Models\Weapon.cs" />
+    <Compile Remove="Models\WeaponObtain.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.0">
       <PrivateAssets>all</PrivateAssets>
