Convert data to static data

--- a/Persona4GoldenHelper/Client/Persona4GoldenHelper.Client.csproj
+++ b/Persona4GoldenHelper/Client/Persona4GoldenHelper.Client.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\Shared\Persona4GoldenHelper.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\data\" />
+  </ItemGroup>
+
 </Project>
